# SzalasApp

./: .dockerignore  .env  .env.example  .env.npm.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_CHEATSHEET.md  DEPLOYMENT_QUICKSTART.md  Dockerfile  FEATURE_SUMMARY.md  GITHUB_WIKI_GUIDE.md  LICENSE  Makefile  OAUTH_SETUP.md  README.md  WIKI_QUICK_START.md  app.py  backup.sh  deploy-from-windows.ps1  deploy-setup.sh  docker-compose.nginx-proxy.yml  docker-compose.npm.yml  docker-compose.prod.yml  docker-compose.yml  import_data.py  init_db.py  nginx-config-example.conf  prepare_wiki.py  pyproject.toml  requirements.txt  set_admin_claim.py  setup.ps1  setup.sh  upload_photos.py
app/: README.md  app.py  gunicorn.conf.py  pyproject.toml
app/scripts/: README.md  cicd_release_notes.py  export_firestore_json.py  firestore_export.py  import_data.py  migrate_to_authentik.py  migrate_user_names.py  set_admin_claim.py  upload_photos.py
app/src/: __init__.py  achievements_service.py  admin.py  auth.py  db_firestore.py  db_users.py  exports.py  gcs_utils.py  id_utils.py  oauth.py  recaptcha.py  views.py
app/static/: manifest.json  service-worker.js
app/templates/: account.html  base.html  home.html  list_scanner.html  list_view.html  lists_index.html  lists_new.html  loan_edit.html  loans_list.html  login.html  logs.html  macros.html  pin_login.html  sprzet_bulk_edit.html  sprzet_card.html  sprzet_edit.html  sprzet_export_config.html  sprzet_import.html  sprzet_list.html  sprzet_zestawienie.html  user_profile.html  usterka_card.html  usterka_edit.html  (+1 more)
(+100 files in other folders)
