[tool.poetry]
name = "szalasapp"
version = "0.1.0"
description = ""
authors = ["lodyczekoladowe <65414380+lodyczekoladowe@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.2"
firebase-admin = "^7.1.0"
python-dotenv = "^1.2.1"
pandas = "^2.3.3"
google-cloud-recaptcha-enterprise = "^1.29.0"
google-cloud-firestore = "^2.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
